--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,41 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
-description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+name: terragrunt
+version: "0.44.5"
+summary: A thin wrapper for Terraform 
+license: MIT
+contact: coty@fluidmind.dev
+issues: https://github.com/coty91/terragrunt-snap/issues
+source-code: https://github.com/coty91/terragrunt-snap
+website: https://github.com/gruntwork-io/terragrunt
+description: Terragrunt is a thin wrapper for Terraform that provides extra tools for working with multiple Terraform modules.
+base: core22
+grade: stable
+confinement: classic
+compression: lzo
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+apps:
+  terragrunt:
+    command: terragrunt
+
+architectures:
+  - build-on: amd64
+  - build-on: armhf
+  - build-on: arm64
+  - build-on: s390x
+  - build-on: ppc64el
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  terragrunt:
+    plugin: go
+    source: https://github.com/gruntwork-io/terragrunt
+    source-type: git
+    source-tag: "v$SNAPCRAFT_PROJECT_VERSION"
+    build-snaps: [go]
+    build-environment:
+      - CGO_ENABLED: "0"
+      - GOFLAGS: "-mod=readonly"
+    override-build: |
+      go mod download
+      go build -ldflags "-s -w"
+      cp terragrunt $SNAPCRAFT_PART_INSTALL/terragrunt
+    stage:
+      - terragrunt
