--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,7 +14,7 @@ compression: lzo
 
 apps:
   terragrunt:
-    command: terragrunt
+    command: bin/terragrunt
     plugs: ["home"]
 
 architectures:
